--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         .timeline-item img {
 			<!--display: block;                 /* Ensures proper layout */ -->
 			width: auto;                    /* Maintain aspect ratio */
-			max-width: 400px;               /* Maximum width for images */
+			max-width: 300px;               /* Maximum width for images */
 			max-height: 200px;              /* Maximum height for images */
 			width: auto;                    /* Maintain aspect ratio */
 			height: auto;                   /* Maintain aspect ratio */
@@ -250,14 +250,14 @@
             {
                 year: "2024",
                 title: "Combining LiDAR and Time Domain Frequency Analysis",
-                description: "Details about your second publication.",
+                description: "Analyzing objects concerning their periodic behavior is mostly performed with inertial measurement units (IMUs) or global navigation satellite system (GNSS) sensors fixed to its surface. For connecting observations, sensors have to be assigned to the same reference frame in space and time as a prerequisite. Using light detection and ranging (LiDAR) observations enables contactless, time-synchronized, and spatially connected data points within a single sensor. Therefore, common signal properties are further analyzed in the spectrum to find connections and similarities between observations. Since observations are spatially continuous we can discretize them and traditionally process them. However, the time domain offers a diversity of ways to simultaneously estimate frequencies and continuously model properties at different spatial locations. Within this work, we exploit the potential of processing LiDAR data in the time domain to make use of the sensor’s contactless observations and its sampling rate in space and time. Consecutive points and their spatial neighborhoods are used to implement temporal as well as spatiotemporal connections to directly model oscillations in 2-D space. Moreover, we compute an uncertainty of estimated variables to qualify our solution. Consequently, our approach offers the opportunity to describe as well as evaluate movements and vibrations of spatially connected areas.",
 				link: "https://ieeexplore.ieee.org/abstract/document/10648750",
                 image: "IEEE2024.png"
             },
             {
 				year: "2023",
                 title: "Efficient In-Memory Point Cloud Query Processing",
-                description: "Details about your first publication." ,
+                description: "Point cloud data acquired via laser scanning or stereo matching of photogrammetry imagery has become an emerging and vital data source in an increasing research and application field. However, point cloud processing can be highly challenging due to an ever-increasing amount of points and the demand for handling the data in near real-time. In this paper, we propose an efficient in-memory point cloud processing solution and implementation demonstrating that the inherent technical identity of the memory location of a point (e.g., a memory pointer) is both sufficient and elegant to avoid gridding as long as the point cloud fits into the main memory of the computing system. We evaluate the per- formance and scalability of the system on three benchmark point cloud datasets (e.g., ETH 3D Point Cloud Dataset, Oakland 3D Point Cloud Dataset, and Kijkduin 4D Point Cloud Dataset) w.r.t different point cloud query patterns like k nearest neighbors, eigenvalue-based geometric feature extraction, and spatio-temporal filtering. Preliminary experiments show very promising results in facilitating faster and more efficient point cloud processing in many potential aspects. We hope the insights shared in the paper will substantially impact broader point cloud processing research as the approach helps to avoid memory amplifications." ,
 				link: "https://www.bgd.ed.tum.de/pdf/2023_pointcloudqueries_Teuscher.pdf",
                 image: null
             }
