--- a/index.html
+++ b/index.html
@@ -110,12 +110,9 @@
 		}
 		
 		.timeline-item {
-			display: flex;                  /* Enable Flexbox for layout */
-			flex-wrap: wrap;                /* Allow content to wrap if needed */
-			align-items: flex-start;        /* Align items to the top */
-			margin-bottom: 20px;            /* Space between items */
-			position: relative;             /* Position required for ::before */
-			padding-left: 30px;             /* Ensure space for the bullet point */
+			clear: both;                    /* Ensure each timeline item starts cleanly */
+			margin-bottom: 30px;            /* Space between timeline items */
+			overflow: hidden;               /* Contain floated elements */
 		}
 
 		.timeline-item::before {
@@ -163,22 +160,19 @@
 		}
 
         .timeline-item img {
-			<!--display: block;                 /* Ensures proper layout */ -->
+			float: right;                   /* Float the image to the right of the text */
+			margin-left: 20px;              /* Add spacing between the image and the text */
+			margin-bottom: 10px;            /* Add spacing below the image */
 			width: auto;                    /* Maintain aspect ratio */
-			max-width: 300px;               /* Maximum width for images */
-			max-height: 200px;              /* Maximum height for images */
-			width: auto;                    /* Maintain aspect ratio */
-			height: auto;                   /* Maintain aspect ratio */
-			margin-left: 20px;              /* Center the image */
-			object-fit: cover;
-			border-radius: 5px;             /* Optional: rounded corners */
-			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: subtle shadow */
-			order: 1;
+			max-width: 300px;               /* Limit image width */
+			max-height: 200px;              /* Limit image height */
+			object-fit: cover;              /* Ensure proper scaling */
+			border-radius: 5px;             /* Optional: Rounded corners */
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 		}
 		
 		.timeline-item .abstract {
-			flex-basis: 100%;               /* Abstract spans the full width */
-			margin-top: 20px;               /* Space between image and abstract */
+			margin-top: 10px;               /* Space between abstract and preceding content */
 			font-size: 0.95rem;             /* Slightly smaller font size for readability */
 			color: #555;                    /* Subtle text color */
 			line-height: 1.6;               /* Improve readability */
@@ -283,17 +277,21 @@
 			const item = document.createElement("div");
 			item.classList.add("timeline-item");
 
-			// Text content (title, description, link)
-			const textContent = document.createElement("div");
-			textContent.classList.add("text-content");
-
 			const title = document.createElement("h3");
 			title.innerText = event.title;
-			textContent.appendChild(title);
+			item.appendChild(title);
 
 			const description = document.createElement("p");
 			description.innerText = event.description;
-			textContent.appendChild(description);
+			item.appendChild(description);
+
+			if (event.image) {
+				const image = document.createElement("img");
+				image.src = event.image;
+				image.alt = `${event.title} Image`;
+				image.classList.add("publication-image");
+				item.appendChild(image); // Add image immediately after the title
+			}
 
 			const details = document.createElement("div");
 			details.classList.add("publication-details");
@@ -309,19 +307,8 @@
 			year.classList.add("year");
 			details.appendChild(year);
 
-			textContent.appendChild(details);
-			item.appendChild(textContent);
+			item.appendChild(details);
 
-			// Image (if available)
-			if (event.image) {
-				const image = document.createElement("img");
-				image.src = event.image;
-				image.alt = `${event.title} Image`;
-				image.classList.add("publication-image");
-				item.appendChild(image);
-			}
-
-			// Abstract
 			const abstract = document.createElement("p");
 			abstract.classList.add("abstract");
 			abstract.innerText = event.description;
@@ -329,6 +316,7 @@
 
 			timelineContainer.appendChild(item);
 		});
+
     </script>
 </body>
 </html>
