--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 			clear: both;                    /* Ensure each timeline item starts cleanly */
 			margin-bottom: 30px;            /* Space between timeline items */
 			overflow: hidden;               /* Contain floated elements */
+			position: relative;
+			padding-left: 30px;
 		}
 
 		.timeline-item::before {
