--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			border-left: 3px solid #004466; /* Add vertical timeline line */
 			padding-left: 20px;             /* Align content with the line */
 			position: relative;             /* Necessary for bullet positioning */
-		    max-height: 500px;               /* Limit the height of the publications box */
+		    max-height: 1000px;               /* Limit the height of the publications box */
 			overflow-y: auto;                /* Enable vertical scrolling */
 			padding-right: 10px;             /* Add some padding for the scrollbar */
 			margin-right: -10px;             /* Align content flush with the container */
@@ -189,6 +189,7 @@
 			object-fit: cover;              /* Ensure proper scaling */
 			border-radius: 5px;             /* Optional: Rounded corners */
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+			order: 1;
 		}
 		
 		.timeline-item .abstract {
