--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			border-left: 3px solid #004466; /* Add vertical timeline line */
 			padding-left: 20px;             /* Align content with the line */
 			position: relative;             /* Necessary for bullet positioning */
-		    max-height: 1000px;               /* Limit the height of the publications box */
+		    max-height: 800px;               /* Limit the height of the publications box */
 			overflow-y: auto;                /* Enable vertical scrolling */
 			padding-right: 10px;             /* Add some padding for the scrollbar */
 			margin-right: -10px;             /* Align content flush with the container */
@@ -130,7 +130,7 @@
 		.timeline-item {
 			clear: both;                    /* Ensure each timeline item starts cleanly */
 			margin-bottom: 30px;            /* Space between timeline items */
-			overflow: hidden;               /* Contain floated elements */
+			<!-- overflow: hidden;               /* Contain floated elements */ -->
 			position: relative;
 			padding-left: 30px;
 		}
