--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		.timeline-item {
 			clear: both;                    /* Ensure each timeline item starts cleanly */
 			margin-bottom: 30px;            /* Space between timeline items */
-			<!-- overflow: hidden;               /* Contain floated elements */ -->
+			overflow: hidden;               /* Contain floated elements */
 			position: relative;
 			padding-left: 30px;
 		}
