--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 		}
 
 		.about-text {
+			hyphens: auto;                  /* Enable automatic word separation */
+			word-wrap: break-word;          /* Ensure long words break properly */
 			display: flex;                  /* Make the text container a flexbox */
 			flex-direction: column;         /* Arrange content vertically */
 			justify-content: felex-start; /* Push .contact-links to the bottom */
