--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
 		}
 
 		.about-text {
-			hyphens: auto;                  /* Enable automatic word separation */
-			word-wrap: break-word;          /* Ensure long words break properly */
 			display: flex;                  /* Make the text container a flexbox */
 			flex-direction: column;         /* Arrange content vertically */
 			justify-content: felex-start; /* Push .contact-links to the bottom */
@@ -265,9 +263,16 @@
     </footer>
     <script>
         const timelineData = [
+			{
+                year: "2025",
+                title: "Spatio-temporal mode description in LiDAR point clouds",
+                description: "Details about your third publication.",
+				link: "https://example.com",
+                image: null
+            },
             {
                 year: "2025",
-                title: "3D Point Cloud Frequencies",
+                title: "MEMS LiDAR sensors for low-cost 3D frequency mode detection",
                 description: "Details about your third publication.",
 				link: "https://example.com",
                 image: null
