--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 			{
                 year: "2025",
                 title: "Spatio-temporal mode description in LiDAR point clouds",
-                description: "Details about your third publication.",
+                description: "Published at JISDM",
 				link: "https://example.com",
                 image: null
             },
