--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
 
 		.timeline-item {
 			clear: both;                    /* Ensure each timeline item starts cleanly */
+			display: flex;                  /* Use Flexbox for layout */
+			align-items: flex-start;        /* Align items (image and text) to the top */
+			gap: 20px;                      /* Space between image and text */
 			margin-bottom: 30px;            /* Space between timeline items */
 			overflow: hidden;               /* Contain floated elements */
 			position: relative;
@@ -178,6 +181,7 @@
 		}
 
         .timeline-item img {
+			margin: 0;						/* Remove extra margins */
 			float: right;                   /* Float the image to the right of the text */
 			margin-left: 50px;              /* Add spacing between the image and the text */
 			margin-bottom: 10px;            /* Add spacing below the image */
@@ -187,6 +191,7 @@
 			object-fit: cover;              /* Ensure proper scaling */
 			border-radius: 5px;             /* Optional: Rounded corners */
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+			align-self: flex-start;         /* Align the image with the title */
 		}
 		
 		.timeline-item .abstract {
