--- a/index.html
+++ b/index.html
@@ -127,9 +127,6 @@
 
 		.timeline-item {
 			clear: both;                    /* Ensure each timeline item starts cleanly */
-			display: flex;                  /* Use Flexbox for layout */
-			align-items: flex-start;        /* Align items (image and text) to the top */
-			gap: 20px;                      /* Space between image and text */
 			margin-bottom: 30px;            /* Space between timeline items */
 			overflow: hidden;               /* Contain floated elements */
 			position: relative;
@@ -151,6 +148,7 @@
 			margin: 0;                      /* Remove default margins to align with the bullet */
 			line-height: 1.5rem;               /* Improve readability */
 			color: #004466;                 /* Title color */
+			display: inline;                /* Allow title to wrap around the image */
 		}
 
         .timeline-item p {
@@ -181,7 +179,6 @@
 		}
 
         .timeline-item img {
-			margin: 0;						/* Remove extra margins */
 			float: right;                   /* Float the image to the right of the text */
 			margin-left: 50px;              /* Add spacing between the image and the text */
 			margin-bottom: 10px;            /* Add spacing below the image */
@@ -191,7 +188,6 @@
 			object-fit: cover;              /* Ensure proper scaling */
 			border-radius: 5px;             /* Optional: Rounded corners */
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-			align-self: flex-start;         /* Align the image with the title */
 		}
 		
 		.timeline-item .abstract {
