--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 			line-height: 1.5rem;               /* Improve readability */
 			color: #004466;                 /* Title color */
 			display: inline;                /* Allow title to wrap around the image */
+			vertical-align: top;            /* Align the title with the top of the image */
 			line-height: 1.6;               /* Match line height with the abstract text */
 		}
 
