--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 			margin-bottom: 30px;            /* Space between timeline items */
 			overflow: hidden;               /* Contain floated elements */
 			position: relative;
+			margin-bottom: 10px;            /* Add spacing below the image */
 		}
 
 		.timeline-item::before {
