--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 		#projects h2 {
 			font-size: 2rem;                /* Section title size */
 			color: #004466;                 /* Match theme color */
-			margin-bottom: 20px;
+			margin-bottom: 20px;            /* Space below the title */
+			text-align: left;               /* Align title to the left */
 		}
 
 		.projects-container {
@@ -383,7 +384,7 @@
 			{
                 year: "2025",
                 title: "Spatio-temporal mode description in LiDAR point clouds",
-                description: "Published at JISDM",
+                description: "Published at JISDM 2025",
 				link: "https://example.com",
                 image: null
             },
