--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		}
 
 		#projects h2 {
-			font-size: 2rem;                /* Section title size */
+			font-size: 1.75rem;             /* Section title size */
 			color: #004466;                 /* Match theme color */
 			margin-bottom: 20px;            /* Space below the title */
 		}
@@ -126,9 +126,10 @@
 			padding: 20px;                  /* Inner padding for content */
 			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 			border-radius: 10px;            /* Rounded corners for consistency */
-			flex: 1 1 calc(50% - 20px);     /* Two cards per row on large screens */
-			max-width: calc(50% - 20px);    /* Ensure equal card width */
 			font-size: 1rem;                /* Match font size to other sections */
+			width: 100%;
+			<!-- flex: 1 1 calc(50% - 20px);     /* Two cards per row on large screens */
+			max-width: calc(50% - 20px);    /* Ensure equal card width */ -->
 		}
 
 		.project-card h3 {
