--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
 		.projects-container {
 			display: flex;                  /* Use Flexbox for layout */
+			flex-direction: column; 		/* Stack projects vertically for full width */
 			flex-wrap: wrap;                /* Allow wrapping on smaller screens */
 			gap: 20px;                      /* Space between project cards */
 		}
