--- a/index.html
+++ b/index.html
@@ -129,13 +129,26 @@
 			font-size: 1rem;                /* Match font size to other sections */
 			width: calc(100% - 40px);       /* Ensure cards stretch to full width of the container */
 			margin: 0 auto; 				/* Center the cards */
+			overflow: hidden;
 			margin-bottom: 20px;            /* Space between cards */
 		}
-
+		
+		.project-image {
+			float: right;                   /* Float image to the right of the text */
+			margin-left: 20px;              /* Space between image and text */
+			margin-bottom: 10px;            /* Space below the image */
+			max-width: 150px;               /* Limit image width */
+			max-height: 100px;              /* Limit image height */
+			object-fit: cover;              /* Ensure proper scaling */
+			border-radius: 5px;             /* Optional: Rounded corners */
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+		}
+		
 		.project-card h3 {
 			font-size: 1.25rem;             /* Adjust card title size */
 			color: #004466;                 /* Match theme color */
 			margin-bottom: 10px;
+			text-align: justify;
 		}
 
 		.project-card p {
@@ -355,6 +368,7 @@
 			<div class="projects-container">
 				<div class="project-card">
 					<h3>Project 1: LiDAR Spatial Mapping</h3>
+					<img src="lidar-image.png" alt="LiDAR Mapping" class="project-image">
 					<p>
 						Exploring innovative ways to map and analyze spatial data using LiDAR technology for enhanced environmental monitoring.
 					</p>
