--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 			<div class="projects-container">
 				<div class="project-card">
 					<h3>Project 1: LiDAR Spatial Mapping</h3>
-					<img src="lidar-image.png" alt="LiDAR Mapping" class="project-image">
+					<img src="PROVILAS.png" alt="PROVILAS" class="project-image">
 					<p>
 						Exploring innovative ways to map and analyze spatial data using LiDAR technology for enhanced environmental monitoring.
 					</p>
