--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 			<h2>Projects</h2>
 			<div class="projects-container">
 				<div class="project-card">
-					<h3>Project 1: LiDAR Spatial Mapping</h3>
+					<h3>PROVILAS</h3>
 					<img src="PROVILAS.png" alt="PROVILAS" class="project-image">
 					<p>
 						Exploring innovative ways to map and analyze spatial data using LiDAR technology for enhanced environmental monitoring.
